test/Dialect/Poly/template_fail.llzk
// RUN: llzk-opt -split-input-file -verify-diagnostics %s

module attributes {llzk.lang} {
  poly.template @T {
    poly.param @P {
      // expected-error@+1 {{block with no terminator}}
      %v = arith.constant 42 : index
    }
  }
}
// -----

module attributes {llzk.lang} {
  poly.template @T {
    // expected-error@+1 {{'poly.param' op type '!felt.type' cannot be initialized from 'poly.yield' with type 'index'}}
    poly.param @P : !felt.type {
      %v = arith.constant 42 : index
      poly.yield %v : index
    }
  }
}
